# apollo-rust

./: .gitignore  Cargo.toml  LICENSE  WEB_ARCHITECTURE.md  WEB_ROADMAP.md  rust-toolchain.toml
crates/apollo-rust-bevy/: Cargo.toml
crates/apollo-rust-bevy-robotics/: Cargo.toml
crates/apollo-rust-bevy-robotics/tests/: regression_tests.rs
crates/apollo-rust-bevy/assets/: README  untitled.glb  untitled2.glb
crates/apollo-rust-bevy/src/: lib.rs
crates/apollo-rust-bevy/src/apollo_bevy_utils/: camera.rs  chain.rs  colors.rs  egui.rs  gltf.rs  materials.rs  meshes.rs  mod.rs  obj.rs  robotics.rs  signatures.rs  transform.rs  transform_gizmo.rs  viewport_visuals.rs  visibility.rs
crates/apollo-rust-bevy/tests/: regression_tests.rs
crates/apollo-rust-continuous-planning/: Cargo.toml
crates/apollo-rust-continuous-planning/src/: lib.rs
crates/apollo-rust-continuous-planning/src/feasibility_checkers/: mod.rs  robot_feasibility_checkers.rs
crates/apollo-rust-file/: Cargo.toml
crates/apollo-rust-file-pyo3/: Cargo.toml  build_wheels.sh  pyproject.toml
crates/apollo-rust-file-pyo3/src/: lib.rs
crates/apollo-rust-file/src/: lib.rs  traits.rs
crates/apollo-rust-file/tests/: regression_tests.rs
crates/apollo-rust-interpolation-adtrait/: Cargo.toml
crates/apollo-rust-interpolation-adtrait/src/: lib.rs  splines.rs
crates/apollo-rust-interpolation-adtrait/tests/: regression_tests.rs
crates/apollo-rust-linalg/: Cargo.toml
crates/apollo-rust-linalg-adtrait/: Cargo.toml
crates/apollo-rust-linalg-adtrait/src/: lib.rs
crates/apollo-rust-linalg/src/: lib.rs  linalg_ad.rs
crates/apollo-rust-mesh-utils/: Cargo.toml
crates/apollo-rust-mesh-utils/src/: collada.rs  gltf.rs  lib.rs  mesh_object.rs  mesh_object_scene.rs  obj.rs  stl.rs  trimesh.rs  trimesh_scene.rs
crates/apollo-rust-mesh-utils/tests/: regression_tests.rs
crates/apollo-rust-modules/: Cargo.toml
crates/apollo-rust-modules/src/: lib.rs
crates/apollo-rust-modules/src/robot_modules/: bounds_module.rs  chain_module.rs  connections_module.rs  dof_module.rs  mod.rs  urdf_module.rs
crates/apollo-rust-optimization-adtrait/: Cargo.toml
crates/apollo-rust-optimization-adtrait/src/: lib.rs
crates/apollo-rust-optimization-adtrait/src/line_searches/: backtracking_line_search.rs  mod.rs
crates/apollo-rust-optimization-adtrait/src/optimizers/: bfgs.rs  gradient_descent.rs  open.rs
crates/apollo-rust-optimization-adtrait/tests/: regression_tests.rs
crates/apollo-rust-preprocessor/: Cargo.toml
crates/apollo-rust-preprocessor/src/: lib.rs  process_functions.rs  standalone_preprocessor.rs
crates/apollo-rust-preprocessor/src/environment_modules_preprocessor/: mod.rs
crates/apollo-rust-preprocessor/src/robot_modules_preprocessor/: mod.rs
crates/apollo-rust-preprocessor/src/utils/: progress_bar.rs
crates/apollo-rust-proximity/: Cargo.toml
crates/apollo-rust-proximity-parry/: Cargo.toml
crates/apollo-rust-proximity-parry/src/: lib.rs  offset_shape.rs
crates/apollo-rust-proximity-parry/src/proxima/: proxima_core.rs
crates/apollo-rust-proximity-parry/tests/: regression_tests.rs
crates/apollo-rust-proximity/src/: bvh.rs  double_group_queries.rs  gjk_epa.rs  lib.rs  offset_shape.rs  shape.rs
crates/apollo-rust-proximity/src/proxima/: mod.rs  proxima1.rs  proxima2.rs  proxima2b.rs  proxima_core.rs
crates/apollo-rust-proximity/src/proxima_core/: proxima1.rs  proxima_core.rs
crates/apollo-rust-proximity/tests/: regression_tests.rs
crates/apollo-rust-robot-modules-builders/: Cargo.toml
crates/apollo-rust-robot-modules-builders/src/: lib.rs
crates/apollo-rust-robot-modules-builders/src/modules/: chain_module.rs  connections_module.rs  dof_module.rs  mod.rs  urdf_module.rs
crates/apollo-rust-robot-modules-builders/src/utils/: collada.rs  progress_bar.rs  stl.rs
crates/apollo-rust-robotModulesBuilder/: Cargo.toml
crates/apollo-rust-robotics/: Cargo.toml
crates/apollo-rust-robotics-adtrait/: Cargo.toml
crates/apollo-rust-robotics-adtrait/src/: lib.rs
crates/apollo-rust-robotics-adtrait/tests/: path_init_tests.rs
crates/apollo-rust-robotics-core/: Cargo.toml
crates/apollo-rust-robotics-core-adtrait/: Cargo.toml
crates/apollo-rust-robotics-core-adtrait/src/: lib.rs
crates/apollo-rust-robotics-core-adtrait/src/modules_runtime/: bounds_adtrait_module.rs  mod.rs  urdf_nalgebra_module.rs
crates/apollo-rust-robotics-core-adtrait/src/robot_functions/: robot_kinematics_functions.rs
crates/apollo-rust-robotics-core/src/: lib.rs
crates/apollo-rust-robotics-core/src/modules/: mod.rs
crates/apollo-rust-robotics-core/src/modules_runtime/: environment_description_nalgebra_module.rs  link_shapes_distance_statistics_nalgebra_module.rs  link_shapes_lie_alg_error_models_nalgebra_module.rs  mod.rs  (+4 more)
crates/apollo-rust-robotics/src/: lib.rs
crates/apollo-rust-robotics/tests/: path_init_tests.rs
crates/apollo-rust-spatial/: Cargo.toml
crates/apollo-rust-spatial-adtrait/: Cargo.toml
crates/apollo-rust-spatial-adtrait/src/: complex_numbers.rs  isometry3.rs  lib.rs  matrices.rs  quaternions.rs  rotation_matrices.rs  translations.rs  vectors.rs
crates/apollo-rust-spatial-adtrait/tests/: regression_tests.rs
crates/apollo-rust-spatial/src/: complex_numbers.rs  isometry3.rs  lib.rs  matrices.rs  quaternions.rs  rotation_matrices.rs  translations.rs  vectors.rs
crates/apollo-rust-spatial/tests/: regression_tests.rs
crates/apollo-rust-wasm/: Cargo.toml
crates/apollo-rust-wasm/src/: kinematics.rs  lib.rs  proximity.rs  robot_modules.rs  web_path_buf.rs
crates/apollo-spatial/: Cargo.toml
crates/apollo-spatial/src/: matrices.rs  translations.rs
crates/apollo_proximity/: Cargo.toml
crates/apollo_proximity/src/: lib.rs  offset_shape.rs  pairwise_group_queries.rs  single_group_queries.rs
crates/apollo_robotics/: Cargo.toml
crates/apollo_robotics/src/: lib.rs  urdf_module_nalgebra.rs
crates/apollo_spatial/: Cargo.toml
crates/apollo_spatial/src/: complex_numbers.rs  isometries.rs  isometry3.rs  lib.rs  matrices.rs  quaternions.rs  rotation_matrices.rs  vectors.rs
(+398 files in other folders)
