[package]
name = "apollo-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/apollo-rust-file",
    "crates/apollo-rust-linalg",
    "crates/apollo-rust-spatial",
    "crates/apollo-rust-lie",
    "crates/apollo-rust-proximity",
    "crates/apollo-rust-file-pyo3",
    "crates/apollo-rust-bevy",
    "crates/apollo-rust-robot-modules",
    "crates/apollo-rust-robotics-core",
    "crates/apollo-rust-robotics",
    "crates/apollo-rust-mesh-utils",
    "crates/apollo-rust-environment-modules",
    "crates/apollo-rust-environments-core",
    "crates/apollo-rust-preprocessor"]
[dependencies]


[lib]
name = "apollo_rust"
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
# lto = "thin"