[package]
name = "apollo-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/apollo-rust-file",
    "crates/apollo-rust-linalg",
    "crates/apollo-rust-spatial",
    "crates/apollo-rust-lie",
    "crates/apollo-rust-proximity",
    "crates/apollo-rust-file-pyo3",
    "crates/apollo-rust-bevy",
    "crates/apollo-rust-modules",
    "crates/apollo-rust-robotics-core",
    "crates/apollo-rust-robotics",
    "crates/apollo-rust-mesh-utils",
    "crates/apollo-rust-preprocessor",
    "crates/apollo-rust-bevy-robotics",
    "crates/apollo-rust-algs",
    "crates/apollo-rust-differentiation",
    "crates/apollo-rust-interpolation", "crates/apollo-rust-optimization"]
[dependencies]


[lib]
name = "apollo_rust"
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev.package."*"]
opt-level = 3
