[package]
name = "apollo-rust-bevy-robotics"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo-rust-bevy = { path = "../apollo-rust-bevy" }
apollo-rust-robotics = { path = "../apollo-rust-robotics" }
apollo-rust-file = { path = "../apollo-rust-file" }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
apollo-rust-lie = { path = "../apollo-rust-lie" }
apollo-rust-modules = { path = "../apollo-rust-modules" }
apollo-rust-robotics-core = { path = "../apollo-rust-robotics-core" }
apollo-rust-interpolation = { path = "../apollo-rust-interpolation" }
apollo-rust-differentiation = { path = "../apollo-rust-differentiation" }
apollo-rust-optimization = { path = "../apollo-rust-optimization" }
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_egui = { version = "0.28.0" }

