[package]
name = "apollo-rust-bevy"
version = "0.0.1"
edition = "2021"

[dependencies]
apollo-rust-robot-modules = { path = "../apollo-rust-modules" }
apollo-rust-file = { path = "../apollo-rust-file" }
apollo-rust-robotics-core = { path = "../apollo-rust-robotics-core" }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
apollo-rust-lie = { path = "../apollo-rust-lie" }
apollo-rust-proximity = { path = "../apollo-rust-proximity" }
apollo-rust-algs = { path = "../apollo-rust-algs" }
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_egui = { version = "0.28.0" }
bevy_obj = { version = "0.14.0" }
bevy_mod_outline = { version = "0.8.1" }
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
parry3d-f64 = { version = "0.16.1", features = ["serde-serialize"] }
arboard = { version = "3.4.0" }