[package]
name = "apollo-rust-bevy"
version = "0.0.1"
edition = "2021"

[dependencies]
apollo-rust-modules = { path = "../apollo-rust-modules" }
apollo-rust-file = { path = "../apollo-rust-file" }
apollo-rust-robotics-core = { path = "../apollo-rust-robotics-core" }
apollo-rust-robotics-core-adtrait = { path = "../apollo-rust-robotics-core-adtrait" }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
apollo-rust-lie = { path = "../apollo-rust-lie" }
apollo-rust-proximity-parry = { path = "../apollo-rust-proximity-parry" }
apollo-rust-algs = { path = "../apollo-rust-algs" }
apollo-rust-interpolation = { path = "../apollo-rust-interpolation" }
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_egui = { version = "0.30" }
bevy_obj = { version = "0.14.0" }
bevy_mod_outline = { version = "0.8.1" }
nalgebra = { version = "=0.33.0", features = ["rand", "serde-serialize"] }
parry3d-f64 = { version = "=0.17.0", features = ["serde-serialize"] }
transform-gizmo-bevy = { version = "0.4.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "3.4.0" }