[package]
name = "apollo-rust-linalg-adtrait"
version = "0.0.1"
edition = "2024"

[dependencies]
# ad_trait = { git = "https://github.com/djrakita/ad_trait" }
ad_trait = { version = "0.2.0" }
nalgebra = { version = "0.34.1", features = ["rand"] }
nalgebra-lapack = { version = "0.27.0", features = ["lapack-openblas"], default-features = false }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
