[package]
name = "apollo-rust-linalg-adtrait"
version = "0.0.1"
edition = "2024"

[dependencies]
# ad_trait = { git = "https://github.com/djrakita/ad_trait" }
ad_trait = { version = "=0.2.2" }
nalgebra = { version = "=0.33.0", features = ["rand"] }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nalgebra-lapack = { version = "0.25.0", features = ["openblas"], default-features = false }
