[package]
name = "apollo-rust-mesh-utils"
version = "0.0.1"
edition = "2021"

[dependencies]
apollo-rust-file = { path = "../apollo-rust-file" }
nalgebra = { version="0.33.0", features=["serde-serialize", "rand"] }
dae-parser = { version="0.10.0" }
stl_io = { version="0.7.0" }
parry3d-f64 = { version= "0.16.1" }
gltf = "1.4.1"
gltf-json = "1.4.1"
obj-rs = { version="0.7.1" }
base64 = "0.22.1"
serde_json = { version="1.0.120" }
serde = { version = "1.0.204", features = ["derive"] }
