[package]
name = "apollo-rust-mesh-utils"
version = "0.0.1"
edition = "2021"

[dependencies]
apollo-rust-file = { path = "../apollo-rust-file" }
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
nalgebra = { version="0.33.0", features=["serde-serialize", "rand"] }
dae-parser = { version="0.10.0" }
stl_io = { version="0.7.0" }
parry3d-f64 = { version= "0.16.1" }
gltf = "1.4.1"
gltf-json = { version = "1.4.1", features = [
    "KHR_lights_punctual",
    "KHR_materials_emissive_strength",
    "KHR_materials_ior",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_specular",
    "KHR_materials_transmission",
    "KHR_materials_unlit",
    "KHR_materials_variants",
    "KHR_materials_volume",
    "KHR_texture_transform",
    "extensions",
    "extras"] }
obj-rs = { version="0.7.1" }
base64 = "0.22.1"
serde_json = { version="1.0.120" }
serde = { version = "1.0.204", features = ["derive"] }
