[package]
name = "apollo-rust-proximity-parry"
version = "0.0.1"
edition = "2021"

[dependencies]
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
apollo-rust-lie = { path = "../apollo-rust-lie" }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
apollo-rust-algs = { path = "../apollo-rust-algs" }
parry3d-f64 = { version = "0.25.3", features = ["serde-serialize", "simd-stable"] }
nalgebra = { version = "0.34.1", features = ["rand", "serde-serialize"] }
serde = { version = "1.0.203", features = ["derive"] }
optimization_engine = { version = "0.9.1" }
rayon = "1.10.0"
rand = "0.8.5"
