[package]
name = "apollo-rust-proximity"
version = "0.1.0"
edition = "2024"

[dependencies]
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
apollo-rust-lie = { path = "../apollo-rust-lie" }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
apollo-rust-algs = { path = "../apollo-rust-algs" }
apollo-rust-mesh-utils = {path = "../apollo-rust-mesh-utils"}
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
serde = { version = "1.0.214", features = ["derive"] }