[package]
name = "apollo-rust-robotics-core-adtrait"
version = "0.1.0"
edition = "2024"

[dependencies]
apollo-rust-modules = { path = "../apollo-rust-modules" }
apollo-rust-file = { path = "../apollo-rust-file" }
apollo-rust-spatial-adtrait = { path = "../apollo-rust-spatial-adtrait" }
apollo-rust-lie-adtrait = { path = "../apollo-rust-lie-adtrait" }
apollo-rust-linalg-adtrait = { path = "../apollo-rust-linalg-adtrait" }
apollo-rust-mesh-utils = { path = "../apollo-rust-mesh-utils" }
serde = { version="1.0.204", features = ["derive"] }
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
ad_trait = { git = "https://github.com/djrakita/ad_trait" }
