[package]
name = "apollo-rust-robotics-core"
version = "0.0.1"
edition = "2021"

[dependencies]
apollo-rust-robot-modules = { path = "../apollo-rust-robot-modules" }
apollo-rust-file = { path = "../apollo-rust-file" }
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
apollo-rust-lie = { path = "../apollo-rust-lie" }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
apollo-rust-proximity = { path = "../apollo-rust-proximity" }
serde = { version="1.0.204", features = ["derive"] }