[package]
name = "apollo-rust-robotics-core"
version = "0.0.1"
edition = "2021"

[dependencies]
apollo-rust-modules = { path = "../apollo-rust-modules" }
apollo-rust-file = { path = "../apollo-rust-file" }
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
apollo-rust-lie = { path = "../apollo-rust-lie" }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
apollo-rust-proximity = { path = "../apollo-rust-proximity" }
apollo-rust-mesh-utils = { path = "../apollo-rust-mesh-utils" }
serde = { version="1.0.204", features = ["derive"] }
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
parry3d-f64 = { version = "0.16.1", features = ["serde-serialize"] }