[package]
name = "apollo-rust-robotics"
version = "0.0.1"
edition = "2021"

[dependencies]
apollo-rust-robot-modules = { path = "../apollo-rust-robot-modules" }
apollo-rust-robotics-core = { path = "../apollo-rust-robotics-core" }
apollo-rust-robot-modules-builders = { path = "../apollo-rust-robot-modules-builders" }
apollo-rust-file = { path = "../apollo-rust-file" }
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
apollo-rust-lie = { path = "../apollo-rust-lie" }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
apollo-rust-proximity = { path = "../apollo-rust-proximity" }
parry3d-f64 = { version = "0.16.1", features = ["serde-serialize"] }

