[package]
name = "apollo-rust-robotics"
version = "0.0.1"
edition = "2021"

[dependencies]
apollo-rust-modules = { path = "../apollo-rust-modules" }
apollo-rust-robotics-core = { path = "../apollo-rust-robotics-core" }
apollo-rust-preprocessor = { path = "../apollo-rust-preprocessor" }
apollo-rust-file = { path = "../apollo-rust-file" }
apollo-rust-spatial = { path = "../apollo-rust-spatial" }
apollo-rust-lie = { path = "../apollo-rust-lie" }
apollo-rust-linalg = { path = "../apollo-rust-linalg" }
apollo-rust-proximity-parry = { path = "../apollo-rust-proximity-parry" }
apollo-rust-interpolation = { path = "../apollo-rust-interpolation" }
parry3d-f64 = { version = "0.25.3", features = ["serde-serialize", "simd-stable"] }

