[package]
name = "apollo-spatial"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo-linalg = { path= "../apollo-linalg" }
apollo-lie = { path= "../apollo-lie" }
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
rand = { version="0.9.0-alpha.1" }
serde = { version="1.0.203", features = ["derive"] }
