[package]
name = "apollo_proximity"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo_spatial = { path = "../apollo_spatial" }
apollo_lie = { path = "../apollo_lie" }
parry3d-f64 = { version = "0.16.1", features = ["serde-serialize"] }
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
serde = { version = "1.0.203", features = ["derive"] }
