[package]
name = "apollo_robotics"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo_robot_preprocessor = { path = "/Users/dannyrakita/Documents/apollo_robot_preprocessor" }
apollo_file = { path = "../apollo_file" }
apollo_spatial = { path = "../apollo_spatial" }
apollo_linalg = { path = "../apollo_linalg" }
apollo_lie = { path = "../apollo_lie" }
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
parry3d = { version = "0.15.1" }
serde = { version="1.0.203", features = ["derive"] }